# Origin

Advanced programming/AP_Coursework/: AP_Coursework.cpp  AP_Coursework.sln  AP_Coursework.vcxproj  AP_Coursework.vcxproj.filters  INI.txt
Basic programming/Coursework/: Class_AllterrainBoots.h  Class_Centaur.cpp  Class_Centaur.h  Class_Eagle.cpp  Class_MagicCarpet.h  Class_Race.h  Class_Transport.cpp  Class_Transport.h  RacingSimulator.cpp
Basic programming/Lesson 10/Task 2/: CMakeLists.txt  Class_RectAngle.cpp  Class_Triangle.cpp
Basic programming/Lesson 11/Task 5/: CMakeLists.txt  Class_RightTriangle.cpp  Class_RightTriangle.h  Class_Square.cpp  print_info.h
Coursework/: CMakeLists.txt  Class_AirTransport.cpp  Class_AirTransport.h  Class_AllterrainBoots.cpp  Class_Broom.cpp  Class_Broom.h  Class_Camel.cpp  Class_Camel.h  Class_Eagle.h  Class_FastCamel.cpp  Class_FastCamel.h  Class_GroundTransport.cpp  Class_GroundTransport.h  Class_MagicCarpet.cpp  Class_Race.cpp
DB/Lesson5_Task1/: CMakeLists.txt  main.cpp
DB/Lesson6_Task1,2/: BD_Lesson6_Task1,2.sln  BD_Lesson6_Task1,2.vcxproj  main.cpp
Lesson 1/Task 1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Lesson 10/Task 1/: source.cpp
Lesson 10/Task 2/: Class_Figure.cpp  Class_Parallelogram.cpp
Lesson 11/Task 3/: CMakeLists.txt  Leaver.cpp  Leaver.h
Lesson 11/Task 5/: Class_IsoscelesTriangle.h  Class_Parallelogram.h  Class_Quadrangle.h  Class_Rhombus.h  Class_Triangle.h
Lesson 2/Task 1/: Lesson2_Task1.sln
Lesson 2/Task 2/: Lesson2_Task2.cpp
Lesson 2/Task 3/: Lesson2_Task3.sln
Lesson 3/Task 1/: Lesson3_Task1.cpp  Lesson3_Task1.sln
Lesson 3/Task 2/: Lesson3_Task2.cpp  Lesson3_Task2.vcxproj.filters
Lesson 4/Task 1/: Lesson4_Task1.vcxproj
Lesson 4/Task 2/: Lesson4_Task2.vcxproj.filters
Lesson 5/Task 2/: Lesson5_Task2.cpp
Lesson 5/Task 3/: Lesson5_Task3.cpp  Lesson5_Task3.sln
Lesson 6/Task 1/: Lesson6_Task1.cpp  Lesson6_Task1.sln  Lesson6_Task1.vcxproj.filters  math_functions.cpp  math_functions.h
Lesson 6/Task 2/: Lesson6_Task2.cpp  Lesson6_Task2.vcxproj
Lesson 6/Task 3/: Class_IsoscelesTriangle.cpp  Lesson6_Task3.vcxproj
Lesson 7/Task 1/: Lesson7_Task1.cpp  Lesson7_Task1.sln  Lesson7_Task1.vcxproj
Lesson 7/Task 2/: Lesson7_Task2.cpp  Lesson7_Task2.sln  Lesson7_Task2.vcxproj
Lesson 8/Task 1/: Lesson8_Task1.vcxproj.filters
Lesson 8/Task 2/: Class_EquilateralTriangle.cpp  Class_EquilateralTriangle.h  Class_Figure.cpp  Class_IsoscelesTriangle.cpp  Class_IsoscelesTriangle.h  Class_MyException.h  Class_Parallelogram.cpp  Class_Parallelogram.h  Class_Quadrangle.cpp  Class_Quadrangle.h  Class_RectAngle.cpp  Class_RectAngle.h  Class_Rhombus.cpp  Class_Rhombus.h  Class_RightTriangle.cpp  Class_RightTriangle.h  (+7 more)
(+297 files in other folders)
